// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainValue fails when given object contains array value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain value:
  <green>[{"hello": "world"}]</color>
Received:
  <red>{"message": [{"hello": "world"}]}</color>"
`;

exports[`.not.toContainValue fails when given object contains object value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain value:
  <green>{"hello": "world"}</color>
Received:
  <red>{"message": {"hello": "world"}}</color>"
`;

exports[`.not.toContainValue fails when given object contains primitive value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to not contain value:
  <green>"world"</color>
Received:
  <red>{"hello": "world"}</color>"
`;

exports[`.toContainValue fails when given object does not contain array value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain value:
  <green>[{"world": "hello"}]</color>
Received:
  <red>{"message": [{"hello": "world"}]}</color>"
`;

exports[`.toContainValue fails when given object does not contain object value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain value:
  <green>{"world": "hello"}</color>
Received:
  <red>{"message": {"hello": "world"}}</color>"
`;

exports[`.toContainValue fails when given object does not contain primitive value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toContainValue(</intensity><green>expected</color><dim>)</intensity>

Expected object to contain value:
  <green>"hello"</color>
Received:
  <red>{"hello": "world"}</color>"
`;
